@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -119,7 +119,7 @@ public class WorkDoneProgressHelper {
       }
 
       var currentCounter = counter.incrementAndGet();
-      var message = String.format("%d/%d%s", currentCounter, size, messagePostfix);
+      var message = "%d/%d%s".formatted(currentCounter, size, messagePostfix);
       var percentage = (double) currentCounter / size * 100;
 
       tick(message, (int) percentage);
