@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -145,7 +145,7 @@ public class ExtractStructureConstructorSupplier implements CodeActionSupplier {
         separator = ", ";
       }
 
-      var newText = String.format("%s%s.%s(\"%s\"%s%s);\n", indent, lValueName, insert, key, separator, value);
+      var newText = "%s%s.%s(\"%s\"%s%s);\n".formatted(indent, lValueName, insert, key, separator, value);
       var textEdit = new TextEdit(range, newText);
       changes.add(textEdit);
     }
