@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -52,7 +52,7 @@ import java.util.regex.Pattern;
 public class CachedPublicDiagnostic extends AbstractDiagnostic {
 
   private static final Pattern PUBLIC = CaseInsensitivePattern.compile(
-    String.format("^(%s|%s)$", Keywords.PUBLIC_REGION.getRu(), Keywords.PUBLIC_REGION.getEn()));
+    "^(%s|%s)$".formatted(Keywords.PUBLIC_REGION.getRu(), Keywords.PUBLIC_REGION.getEn()));
 
   @Override
   protected void check() {
