@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -59,9 +59,9 @@ public class MissedRequiredParameterDiagnostic extends AbstractVisitorDiagnostic
   public ParseTree visitFile(BSLParser.FileContext ctx) {
     super.visitFile(ctx);
     for (var reference : referenceIndex.getReferencesFrom(documentContext.getUri(), SymbolKind.Method)) {
-      var call = calls.get(reference.getSelectionRange());
+      var call = calls.get(reference.selectionRange());
       if (call != null) {
-        checkMethod((MethodSymbol) reference.getSymbol(), call);
+        checkMethod((MethodSymbol) reference.symbol(), call);
       }
     }
     return ctx;
@@ -111,7 +111,7 @@ public class MissedRequiredParameterDiagnostic extends AbstractVisitorDiagnostic
       }
     }
     if (!missedParameters.isEmpty()) {
-      var message = info.getMessage(String.format("'%s'", String.join("', '", missedParameters)));
+      var message = info.getMessage("'%s'".formatted(String.join("', '", missedParameters)));
       diagnosticStorage.addDiagnostic(callInfo.range, message);
     }
   }
