@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -107,8 +107,7 @@ public class DiagnosticInfo {
     var devSuffix = useDevSite ? "/dev" : "";
     var languageSuffix = language == Language.EN ? "/en" : "";
 
-    var siteDiagnosticsUrl = String.format(
-      "%s%s%s/diagnostics/",
+    var siteDiagnosticsUrl = "%s%s%s/diagnostics/".formatted(
       siteRoot,
       devSuffix,
       languageSuffix
