@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -80,6 +80,6 @@ public abstract class AbstractObjectPool<T> {
 
   @Override
   public synchronized String toString() {
-    return String.format("Pool available=%d inUse=%d", available.size(), inUse.size());
+    return "Pool available=%d inUse=%d".formatted(available.size(), inUse.size());
   }
 }
