@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -226,6 +226,6 @@ class DuplicatedInsertionIntoCollectionDiagnosticTest extends AbstractDiagnostic
   }
 
   private String getMessage(String keyName, String collectionName) {
-    return String.format("Проверьте повторную вставку %s в коллекцию %s", keyName, collectionName);
+    return "Проверьте повторную вставку %s в коллекцию %s".formatted(keyName, collectionName);
   }
 }
