@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -25,7 +25,6 @@ import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 
@@ -79,7 +78,7 @@ class PrivilegedModuleMethodCallDiagnosticTest extends AbstractDiagnosticTest<Pr
   }
 
   private List<Diagnostic> getDiagnosticsAsCommonModule() {
-    Path moduleFile = Paths.get(PATH_TO_MODULE_FILE).toAbsolutePath();
+    Path moduleFile = Path.of(PATH_TO_MODULE_FILE).toAbsolutePath();
 
     initServerContext(PATH_TO_METADATA);
 
