@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -34,7 +34,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -99,7 +98,7 @@ class RedundantAccessToObjectDiagnosticTest extends AbstractDiagnosticTest<Redun
   @SneakyThrows
   DocumentContext createDocumentContextFromFile(String pathToFile) {
     Path path = Absolute.path("src/test/resources/metadata/designer");
-    Path testFile = Paths.get(pathToFile).toAbsolutePath();
+    Path testFile = Path.of(pathToFile).toAbsolutePath();
 
     initServerContext(path);
     return spy(TestUtils.getDocumentContext(
