@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -39,7 +39,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -89,7 +89,7 @@ class SmokyTest {
 
     var srcDir = "./src/test/resources/";
     List<Diagnostic> diagnostics = new ArrayList<>();
-    FileUtils.listFiles(Paths.get(srcDir).toAbsolutePath().toFile(), new String[]{"bsl", "os"}, true)
+    FileUtils.listFiles(Path.of(srcDir).toAbsolutePath().toFile(), new String[]{"bsl", "os"}, true)
       .forEach(filePath -> {
         LOGGER.info(filePath.toString());
         var documentContext = TestUtils.getDocumentContextFromFile(filePath.toString());
