@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -158,7 +158,7 @@ class TransferringParametersBetweenClientAndServerDiagnosticTest extends Abstrac
   }
 
   private String getMessage(String paramName, String methodName) {
-    return String.format("Установите модификатор \"Знач\" для параметра %s метода %s",
+    return "Установите модификатор \"Знач\" для параметра %s метода %s".formatted(
       paramName, methodName);
   }
 
