@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -30,7 +30,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import static com.github._1c_syntax.bsl.languageserver.util.Assertions.assertThat;
@@ -50,7 +49,7 @@ class WrongHttpServiceHandlerDiagnosticTest extends AbstractDiagnosticTest<Wrong
     final var path = Absolute.path(PATH_TO_METADATA);
 
     initServerContext(path);
-    Path testFile = Paths.get(PATH_TO_MODULE_FILE).toAbsolutePath();
+    Path testFile = Path.of(PATH_TO_MODULE_FILE).toAbsolutePath();
     var documentContext = TestUtils.getDocumentContext(
       testFile.toUri(),
       FileUtils.readFileToString(testFile.toFile(), StandardCharsets.UTF_8),
