@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2025
+ * Copyright (c) 2018-2026
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -36,7 +36,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Collectors;
 
 import static com.github._1c_syntax.bsl.languageserver.util.TestUtils.PATH_TO_METADATA;
@@ -56,7 +56,7 @@ class ReferenceIndexTest {
 
   @PostConstruct
   void prepareServerContext() {
-    serverContext.setConfigurationRoot(Paths.get(PATH_TO_METADATA));
+    serverContext.setConfigurationRoot(Path.of(PATH_TO_METADATA));
     serverContext.populateContext();
   }
 
@@ -156,10 +156,10 @@ class ReferenceIndexTest {
     var reference = referenceIndex.getReference(uri, position).orElseThrow();
 
     // then
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(2, 22, 41));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(2, 22, 41));
+    assertThat(reference.uri()).isEqualTo(uri);
   }
 
   @Test
@@ -174,28 +174,28 @@ class ReferenceIndexTest {
 
     // when
     final var referencesTo = referenceIndex.getReferencesTo(calledMethodSymbol).stream()
-      .filter(reference -> reference.getUri().equals(uri))
+      .filter(reference -> reference.uri().equals(uri))
       .filter(reference -> Ranges.containsRange(methodSymbol.getRange(), reference.toLocation().getRange()))
       .collect(Collectors.toList());
 
     // then
     var reference = referencesTo.get(0);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(8, 26, 45));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(8, 26, 45));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     reference = referencesTo.get(1);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(9, 26, 45));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(9, 26, 45));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     reference = referencesTo.get(2);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(10, 22, 41));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(10, 22, 41));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     assertThat(referencesTo).hasSize(3);
   }
@@ -212,28 +212,28 @@ class ReferenceIndexTest {
 
     // when
     final var referencesTo = referenceIndex.getReferencesTo(calledMethodSymbol).stream()
-      .filter(reference -> reference.getUri().equals(uri))
+      .filter(reference -> reference.uri().equals(uri))
       .filter(reference -> Ranges.containsRange(methodSymbol.getRange(), reference.toLocation().getRange()))
       .collect(Collectors.toList());
 
     // then
     var reference = referencesTo.get(0);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(22, 42, 61));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(22, 42, 61));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     reference = referencesTo.get(1);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(23, 42, 61));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(23, 42, 61));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     reference = referencesTo.get(2);
-    assertThat(reference.getFrom()).isEqualTo(methodSymbol);
-    assertThat(reference.getSymbol()).isEqualTo(calledMethodSymbol);
-    assertThat(reference.getSelectionRange()).isEqualTo(Ranges.create(24, 38, 57));
-    assertThat(reference.getUri()).isEqualTo(uri);
+    assertThat(reference.from()).isEqualTo(methodSymbol);
+    assertThat(reference.symbol()).isEqualTo(calledMethodSymbol);
+    assertThat(reference.selectionRange()).isEqualTo(Ranges.create(24, 38, 57));
+    assertThat(reference.uri()).isEqualTo(uri);
 
     assertThat(referencesTo).hasSize(3);
   }
@@ -245,7 +245,7 @@ class ReferenceIndexTest {
     var methodSymbol = documentContext.getSymbolTree().getMethodSymbol("Тест_ИмяПараметр").orElseThrow();
 
     final var referencesFromLocationRepo = referenceIndex.getReferencesFrom(documentContext.getUri(), SymbolKind.Method).stream()
-      .filter(reference -> Ranges.containsRange(methodSymbol.getRange(), reference.getSelectionRange()))
+      .filter(reference -> Ranges.containsRange(methodSymbol.getRange(), reference.selectionRange()))
       .collect(Collectors.toList());
 
     assertThat(referencesFromLocationRepo).isEmpty();
